Couple small edits and adding notes where text needs to be updated.

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1379,12 +1379,20 @@ Scalable off-chain instant payments},
 	year={2012}
 }
 
+%@inproceedings{ruoti2017weighing,
+%	title={Weighing context and trade-offs: How suburban adults selected their online security posture},
+%	author={Ruoti, Scott and Monson, Tyler and Wu, Justin and Zappala, Daniel and Seamons, Kent},
+%	booktitle={Thirteenth Symposium on Usable Privacy and Security ($\{$SOUPS$\}$ 2017). USENIX Association},
+%	year={2017}
+%}
+
 @inproceedings{ruoti2017weighing,
-	title={Weighing context and trade-offs: How suburban adults selected their online security posture},
-	author={Ruoti, Scott and Monson, Tyler and Wu, Justin and Zappala, Daniel and Seamons, Kent},
-	booktitle={Thirteenth Symposium on Usable Privacy and Security ($\{$SOUPS$\}$ 2017). USENIX Association},
-	year={2017}
+	title={Redacted},
+	author={},
+	booktitle={},
+	year={}
 }
+
 
 @inproceedings{castro1999practical,
 	title={Practical Byzantine fault tolerance},
