--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -49,6 +49,9 @@ As such, while it can be used in place of simpler systems (e.g., a replicated da
 
 \subsection{Normative and Technical Properties are Cleanly Separable}
 \label{sec:normative}
+
+\snote{Discuss more about properties here. Centered around decentralized governance.}
+
 When reading documents from industry, normative and technical properties are often intermingled with each other.
 The injection of ideology into a technical field causes confusion and suboptimal design choices, not to mention muddying discussion and preventing clarity.
 In our concept graph, however, technical properties and normative properties cleanly separate.
@@ -60,9 +63,12 @@ For example, several normative properties dealt with public participation, commu
 Bitcoin demonstrates that Blockchain technology can be used to achieve these properties, but it is not the case that all Blockchain systems will accomplish these goals---for example, Ripple is a Blockchain system without public participation.
 
 \section{Discussion}
+\snote{Update and refine this section.}
 In this section, we summarize a few remaining discussion points motivated by our grounded theory analysis of Blockchain technology.
 
 \subsection{Private Governance}
+\snote{Potentially more broadly about governance.}
+
 In our survey of the industrial literature, we encountered several systems that claimed to be Blockchain systems, but which did not have shared governance.
 These systems resembled Blockchain systems, but with one critical difference: all the miners were controlled by a single entity.
 The most prominent example of a private governance system is IBM's HyperLedger Fabric.
@@ -84,7 +90,6 @@ While there were some valid applications of Blockchain as a data lake, in most c
 
 It may be possible to add confidentiality to Blockchain technology, but care must be taken to ensure that this confidentiality does not preclude miners ability to validate and audit the system.
 This remains an open research problem.
-
 
 \subsection{Ideology, Hype, and Ulterior Motives}
 Many proponents of Blockchain technology believe that it has the capability to massively disrupt how society operates, or at least to rapidly overtake legacy solutions in many significant industries. This belief is hyperbole (i.e., hype) as though Blockchain technology has many valid uses, it has not, nor is it likely to achieve this Utopian vision. This ideology and hype cause problems: for example, frequent emotionally-charged schisms within Blockchain advocate and developer communities---especially those affiliated with Bitcoin. This turmoil prevents level-headed scientific discourse and wastes developer resources. It can also tangibly affect the stability of a Blockchain systems by causing a fork, in which two independent chains emerge to used and maintained by different groups, further dividing resources.
