Updating with new figures.

--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -116,24 +116,24 @@ Based on these interconnections, concepts were divided into five different categ
 \begin{itemize}
 	\item \textbf{Primitives.} These are the primitives that are used to enable Blockchain technology. Unlike properties, they are not useful by themselves, but only when combined with other primitives to achieve specific properties. Examples include on-chain tokens, authenticated data-structures, and zero-knowledge proofs.
 	
-	\item \textbf{Technological properties.} Technological properties are the core building blocks and features of Blockchain technology. Examples include decentralized governance, append-only ledgers, and data replication.
+	\item \textbf{Technological properties.} Technological properties are the core building blocks and features of Blockchain technology. Examples include decentralized governance, append-only transactional ledgers, and decentralized redundancy.
 	
 	\item \textbf{Normative properties.} Normative properties differ from technological properties in that they are not technical, but rather represent properties that people hope to achieve through the use of Blockchain technology. Critically, these properties cannot be achieved through reliance on the technical properties alone, but require the system built on top of Blockchain technology be designed to accomplish these goals. Examples include censorship resistance, ease-of-entry for miners, low cost to participate.
 	In general, normative properties roughly correlate to the hype attached to Blockchain technology.
 
-	\item \textbf{Capabilities.} Capabilities are high-level features provided by Blockchain technology. Examples include on-chain asset provenance, anonymity, and resilience.
+	\item \textbf{Capabilities.} Capabilities are high-level features provided by Blockchain technology. Examples include on-chain asset provenance, smart contracts, and global auditability.
 	
 	\item \textbf{Use cases.} Use cases are the areas where the properties and capabilities of Blockchain technology would be useful in building systems. Examples include cryptocurrencies, supply chain management, and identity management.
 \end{itemize}
  \renewcommand{\labelitemi}{\textbullet}
 
-Our categorization resulted in 20 technical primitives, 15 technical properties, 11 normative properties, 12 capabilities, and 19 use cases.
+Our categorization resulted in 21 technical primitives, 14 technical properties, 12 normative properties, 12 capabilities, and 19 use cases.
 While we divide the concepts into these five categories, individual concepts are highly interconnected, both inter- and intra-category. 
 This provides credence to the notion that Blockchain technology overall is a cohesive, with each of the component concepts serving a purpose in the overall technology.
 
-Figures for the technical properties, capabilities, and normative properties cateogires are given throughout the paper (see Figures~\ref{fig:technical-properties}, whereas primitives and use cases are discussed within the text of the paper.
-Within the figures, arrows represent dependency relationships---i.e., the source concept is used to support the destination concept---and categories are color coded: technical primitives are green, technical properties are blue, normative properties are orange, and capabilities are purple.
-In some cases, several concepts (e.g., open governance and consortium governance) derive from a single parent concept (e.g., governance) and this is represented by having a box for the parent concept that surrounds the children concepts.
+%Figures for the technical properties, capabilities, and normative properties cateogires are given throughout the paper (see Figures~\ref{fig:technical-properties}, whereas primitives and use cases are discussed within the text of the paper.
+%Within the figures, arrows represent dependency relationships---i.e., the source concept is used to support the destination concept---and categories are color coded: technical primitives are green, technical properties are blue, normative properties are orange, and capabilities are purple.
+%In some cases, several concepts (e.g., open governance and consortium governance) derive from a single parent concept (e.g., governance) and this is represented by having a box for the parent concept that surrounds the children concepts.
 
 This is the first stage of our methodology where research expertise directly influenced the results.
 First, by its very nature drawing connections between concepts is subjective.
