--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -2,30 +2,45 @@
 
 \section{What is Blockchain Technology?}
 \label{sec:blockchain}
-Our description of Blockchain technology is based on the technical properties identified during our analysis (see Figure~\ref{fig:technical-properties}).
+Our description of Blockchain technology is based on the technical properties identified during our analysis (see Figure~\ref{fig:technical-properties}).\footnote{A version of this chart that shows the technical primitives that support the technical properties is given in the Appendix (see Figure~\ref{fig:technical-properties-full}).}
 This analysis revealed three key groups of properties: shared governance and operation, a cryptographically-authenticated append-only ledger, and resilience.
 By themselves, these components are nothing new, but used together they form what is known as \emph{Blockchain technology} or \emph{Blockchain} for short.
 
-\begin{figure}
+\begin{figure*}
 	\centering
-	\includegraphics[width=\columnwidth]{figures/technical-properties}	
-	\caption{Technical Properties for Blockchain Technology.}
+	\includegraphics[page=1,width=.75\textwidth]{figures/grounded-theory-main}
+	
+	Technical properties are in blue and technical primitives are in green.
+	\caption{Technical Properties for Blockchain Technology With Supporting Technical Primitives}
+	\label{fig:technical-properties-full}
+\end{figure*}
+
+\begin{figure*}
+	\centering
+	\includegraphics[page=2,width=.75\textwidth]{figures/grounded-theory-main}
+	
+	\caption{Technical Properties for Blockchain Technology}
 	\label{fig:technical-properties}
-\end{figure}
+\end{figure*}
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\columnwidth]{figures/capabilities}	
-	\caption{Capabilities for Blockchain Technology.}
-	\label{fig:capabilities}
-\end{figure}
-
-\begin{figure}
-	\centering
-	\includegraphics[width=\columnwidth]{figures/normative-properties}	
-	\caption{Normative Properties for Blockchain Technology.}
+	\includegraphics[page=3,width=\columnwidth]{figures/grounded-theory-main}
+	
+	Arrows indicate that the destination depends on the source.
+	\caption{Normative Properties for Blockchain Technology}
 	\label{fig:normative-properties}
 \end{figure}
+
+
+\begin{figure*}
+	\centering
+	\includegraphics[page=4,width=.75\textwidth]{figures/grounded-theory-main}
+	
+	Arrows indicate that the destination depends on the source except where an explicit relationship is given.
+	\caption{Capabilities for Blockchain Technology}
+	\label{fig:Capabilities}
+\end{figure*}
 
 \subsection{Shared Governance and Operation}
 At the heart of Blockchain technology is the principle of shared governance and operation.
