Updating the figures and moving them to their appropriate locations within the paper.

--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -50,6 +50,15 @@ As such, while it can be used in place of simpler systems (e.g., a replicated da
 \subsection{Normative and Technical Properties are Cleanly Separable}
 \label{sec:normative}
 
+\begin{figure}
+	\centering
+	\includegraphics[page=4,width=\columnwidth]{figures/grounded-theory-main}
+	
+	Arrows indicate that the destination depends on the source except where an explicit relationship is given.
+	\caption{Capabilities for Blockchain Technology}
+	\label{fig:Capabilities}
+\end{figure}
+
 \snote{Discuss more about properties here. Centered around decentralized governance.}
 
 When reading documents from industry, normative and technical properties are often intermingled with each other.
