--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -116,7 +116,7 @@ Based on these interconnections, concepts were divided into five different categ
 \begin{itemize}
 	\item \textbf{Primitives.} These are the primitives that are used to enable Blockchain technology. Unlike properties, they are not useful by themselves, but only when combined with other primitives to achieve specific properties. Examples include on-chain tokens, authenticated data-structures, and zero-knowledge proofs.
 	
-	\item \textbf{Technological properties.} Technological properties are the core building blocks and features of Blockchain technology. Examples include decentralized governance, append-only transactional ledgers, and decentralized redundancy.
+	\item \textbf{Technical properties.} Technical properties are the core building blocks and features of Blockchain technology. Examples include decentralized governance, append-only transactional ledgers, and decentralized redundancy.
 	
 	\item \textbf{Normative properties.} Normative properties differ from technological properties in that they are not technical, but rather represent properties that people hope to achieve through the use of Blockchain technology. Critically, these properties cannot be achieved through reliance on the technical properties alone, but require the system built on top of Blockchain technology be designed to accomplish these goals. Examples include censorship resistance, ease-of-entry for miners, low cost to participate.
 	In general, normative properties roughly correlate to the hype attached to Blockchain technology.
@@ -127,7 +127,7 @@ Based on these interconnections, concepts were divided into five different categ
 \end{itemize}
  \renewcommand{\labelitemi}{\textbullet}
 
-Our categorization resulted in 21 technical primitives, 14 technical properties, 12 normative properties, 12 capabilities, and 19 use cases.
+Our categorization resulted in 21 technical primitives, 14 technical properties, 12 normative properties, 13 capabilities, and 19 use cases.
 While we divide the concepts into these five categories, individual concepts are highly interconnected, both inter- and intra-category. 
 This provides credence to the notion that Blockchain technology overall is a cohesive, with each of the component concepts serving a purpose in the overall technology.
 
