--- a/paper/main.tex
+++ b/paper/main.tex
@@ -90,6 +90,10 @@
 
 %====================================================================
 
+\input{sections/appendix}
+
+%====================================================================
+
 \end{document}
 
 
