--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -1,46 +1,18 @@
 % !TEX root = ../main.tex
 
 \section{What is Blockchain Technology?}
+\begin{figure}
+	\centering
+	\includegraphics[page=2,width=\columnwidth]{figures/grounded-theory-main}
+	
+	\caption{Technical Properties for Blockchain Technology}
+	\label{fig:technical-properties}
+\end{figure}
+
 \label{sec:blockchain}
 Our description of Blockchain technology is based on the technical properties identified during our analysis (see Figure~\ref{fig:technical-properties}).\footnote{A version of this chart that shows the technical primitives that support the technical properties is given in the Appendix (see Figure~\ref{fig:technical-properties-full}).}
 This analysis revealed three key groups of properties: shared governance and operation, a cryptographically-authenticated append-only ledger, and resilience.
 By themselves, these components are nothing new, but used together they form what is known as \emph{Blockchain technology} or \emph{Blockchain} for short.
-
-\begin{figure*}
-	\centering
-	\includegraphics[page=1,width=.75\textwidth]{figures/grounded-theory-main}
-	
-	Technical properties are in blue and technical primitives are in green.
-	\caption{Technical Properties for Blockchain Technology With Supporting Technical Primitives}
-	\label{fig:technical-properties-full}
-\end{figure*}
-
-\begin{figure*}
-	\centering
-	\includegraphics[page=2,width=.75\textwidth]{figures/grounded-theory-main}
-	
-	\caption{Technical Properties for Blockchain Technology}
-	\label{fig:technical-properties}
-\end{figure*}
-
-\begin{figure}
-	\centering
-	\includegraphics[page=3,width=\columnwidth]{figures/grounded-theory-main}
-	
-	Arrows indicate that the destination depends on the source.
-	\caption{Normative Properties for Blockchain Technology}
-	\label{fig:normative-properties}
-\end{figure}
-
-
-\begin{figure*}
-	\centering
-	\includegraphics[page=4,width=.75\textwidth]{figures/grounded-theory-main}
-	
-	Arrows indicate that the destination depends on the source except where an explicit relationship is given.
-	\caption{Capabilities for Blockchain Technology}
-	\label{fig:Capabilities}
-\end{figure*}
 
 \subsection{Shared Governance and Operation}
 At the heart of Blockchain technology is the principle of shared governance and operation.
@@ -137,6 +109,15 @@ In this way, rebuilding a data store represents diffused trust in the system and
 \section{Blockchain Technology's Capabilities}
 \label{sec:capabilities}
 
+\begin{figure}
+	\centering
+	\includegraphics[page=3,width=\columnwidth]{figures/grounded-theory-main}
+	
+	Arrows indicate that the destination depends on the source.
+	\caption{Normative Properties for Blockchain Technology}
+	\label{fig:normative-properties}
+\end{figure}
+
 Blockchain technology assembles its various technical primitive and properties to provide several key capabilities.
 
 \subsection{Provenance and Auditability}
@@ -148,7 +129,7 @@ Additionally, this information can be used by non-miners to verify that the syst
 If transactions are used to store information regarding digital or real-world resources (using tokens), then the provenance information for the Blockchain system can also be used to provide audit information for those resources.
 This can be used to track physical, off-chain assets (e.g., supply chain management, tracking diamonds), digital, off-chain assets (e.g., copyrighted digital media), or digital, on-chain assets (e.g., cryptocurrencies, files).
  
-\subsection{Access Control and Anonymity}
+\subsection{Access Control and Pseudonymity}
 Whether a user of a Blockchain system is able to create, update, or delete a token is based on permissions defined by the miners.
 While these permissions could be tracked using traditional access control paradigms, most often they are regulated cryptographically.
 In this paradigm, when a token is created it is also associated with a public key.
@@ -173,6 +154,3 @@ Still, smart contracts suffer from problems common to all programs (e.g., bugs, 
 
 \subsection{Data Discoverability}
 \snote{Add}
-
-\subsection{Resilience}
-\snote{Reference text in previous section}
